--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
@@ -7,26 +13,20 @@
   pointer-events: none;
 }
 
+.Auth {
+  display:  flex;
+  justify-content: flex-end;
+  padding: 20px;
+  background-color: lightgray;
+  margin-bottom: 30px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+input, button {
+  border: solid 1px lightgray;
+  padding: 8px;
+  margin-inline: 4px;
+  border-radius: 4px;
+}
+
+input:hover, button:hover {
+  outline: darkgray 1px solid;
+}
+
+input:active, button:active {
+  outline: black 1px solid;
+}
+
